--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,35 @@
+:root {
+  --nat-navbar-bg: darkblue;
+  --nat-navbar-bg-color: darkblue;
+  --nat-navbar-bg-rgb: 0, 0, 130;
+  --nat-navbar-text-color: white;
+}
+
 html,
 body {
+  --bs-dark: var(--nat-navbar-bg);
+  --bs-dark-rgb: var(--nat-navbar-bg-rgb);
   --bs-light-rgb: 236, 236, 236;
   box-sizing: border-box;
   height: 100%;
   padding: 0;
   margin: 0;
+  background: fixed center url("/sky.jfif");
+  background-size: cover;
 }
+
+body .navbar {
+  --bs-navbar-active-color: var(--nat-navbar-highlight-text);
+  --bs-navbar-brand-color: var(--nat-navbar-text-color);
+  --bs-navbar-brand-hover-color: var(--nat-navbar-highlight-text);
+  --bs-navbar-color: var(--nat-navbar-text-color);
+  --bs-navbar-hover-color: var(--nat-navbar-highlight-text);
+}
+
+footer, footer a {
+  color: var(--nat-navbar-text-color);
+}
+
 .wrapper {
   box-sizing: border-box;
   min-height: 100%;
