list contacts page mockup finished in 30 minutes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
   --nat-navbar-bg-color: darkblue;
   --nat-navbar-bg-rgb: 0, 0, 130;
   --nat-navbar-text-color: white;
+  --nat-navbar-highlight-text: khaki;
 }
 
 html,
